Fix silently dismissing user defined errors

All user defined errors were silently dismissed, since
error was passed on as a boolean instead of an integer,
so no differentation could be made anymore down the line.

This fix correctly dismisses a cancelled share but again
shows a user defined error with a red indicator

BUG: 452558
(cherry picked from commit aac46ae0609cfa5c531b5407f8091747a98a10ae)